"Add JavaScript code on all pages to ensure the Bootstrap mobile navbar collapses when navigating to in-page links"

--- a/assets/css/marketing.css
+++ b/assets/css/marketing.css
@@ -441,7 +441,7 @@ margin-right: 0px; }
  
    .navbar * {
 color: rgb(15, 4, 57);
-  font-size: 97%;  
+  font-size: 95%;  
   font-weight: 500;   
   padding: 0.2rem 0.2rem;
   ;
